# GITAdaptiveUI

./: .gitignore  Makefile  README.md  pytest.ini
ProjectSettings/: ProjectSettings.asset
analysis_multigame/: __init__.py  pyproject.toml  requirements.txt
analysis_multigame_scene/: __init__.py
analysis_public/: __init__.py  pyproject.toml  requirements.txt
analysis_public/src/: __init__.py  common.py  paths.py  real_public.py
analysis_public/src/evaluation/: __init__.py  build_public_to_unity_config.py  evaluate_public_target_selection.py  evaluate_public_touch_dynamics.py  public_report_builder.py
analysis_public/src/features/: __init__.py  hitbox_features.py  public_touch_features.py  ui_grounding_features.py  user_variation.py
analysis_public/src/loaders/: __init__.py  henze_loader.py  mc_snake_loader.py  rico_loader.py  screen_annotation_loader.py  touch_dynamics_loader.py  tsi_loader.py
analysis_public/src/models/: __init__.py  public_hitbox_baselines.py  public_target_selection_benchmark.py  public_user_gaussian.py
analysis_public/src/preprocess/: __init__.py  build_all_public.py  preprocess_henze.py  preprocess_mc_snake.py  preprocess_rico.py  preprocess_tsi.py
analysis_public/src/visualization/: __init__.py  public_heatmaps.py  public_plots.py
analysis_public/tests/: test_public_pipeline.py
analysis_unity/: __init__.py  pyproject.toml
docs/: data_location_inventory_ko.md  dataset_acquisition_log_ko.md  dataset_collection_labeling_round2_ko.md  evaluation_metrics_ko.md  experiment_protocol_ko.md  full_framework_implementation_ko.md  (+13 more)
(+176 files in other folders)
