[project]
name = "adui-analysis-public"
version = "0.1.0"
description = "Public dataset construction and benchmark pipeline for ADUI."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "pyarrow>=15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
